<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.PostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/publicar"
                android:textSize="18dp"
                android:layout_marginTop="23dp"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/imageViewPost1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/upload_image"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="@color/white"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/imageViewPost2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/upload_image"
                        android:scaleType="centerCrop"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_title_orange_50"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Titulo"
                    android:inputType="text"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_description_gray_50"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Descripcion"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:maxLines="4"
                    android:maxLength="1000"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_category_gray_50"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="3dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/categoria"
                    android:inputType="text"
                    android:minHeight="48dp"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp">
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicar"
        android:background="@drawable/rounded_button"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        />
</androidx.coordinatorlayout.widget.CoordinatorLayout>